# doveseed

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  README.rst  config.dev.sample.json  config.sample.json  dev.py  pylintrc  pyproject.toml  pytest.ini  recaptcha.sample.json  start-dev.sh
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  docker-publish.yml
doveseed/: app.py  clean_unconfirmed.py  cli.py  config.py  confirmation.py  domain_types.py  email_notification.py  email_templating.py  feed.py  notifier.py  recaptcha.py  registration.py  smtp.py  storage.py  token_gen.py
mail_tests/: send_test_mail.py  test_smtp.py
pushmail/: app.py  confirmation.py  email_templating.py  endpoints.py  registration.py  smtp.py  storage.py  token_gen.py  types.py
templates/example/: .subscribe.html.swo  .subscribe.txt.swo  new-post.html  new-post.subject.txt  new-post.txt  subscribe.html  subscribe.subject.txt  subscribe.txt  unsubscribe.html  unsubscribe.subject.txt  unsubscribe.txt
templates/example/files/: style.css
tests/: test_app_integration.py  test_confirmation.py  test_email_notification.py  test_email_templating.py  test_feed.py  test_flask_integration.py  test_notifier.py  test_registration.py  test_storage.py
