[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
description = "Doveseed is a backend service for email subscriptions to RSS feeds."
keywords = ["email", "rss", "subscriptions"]
license = "MIT"
name = "doveseed"
readme = "README.rst"
repository = "https://github.com/jgosmann/doveseed/"
version = "1.1.0"  # Also update in doveseed/__init__.py

[tool.poetry.dependencies]
Werkzeug = "^2.2.2"
flask = "^2.2.2"
flask_cors = "^3.0"
jinja2 = "^3.1.2"
python = "^3.7.2"
tinydb = "^4.7.0"
typing_extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "22.8.0"
mypy = "^0.981.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-emoji = "^0.2.0"
pytest-mypy = "^0.10.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
