[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Email",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
description = "Doveseed is a backend service for email subscriptions to RSS feeds."
keywords = ["email", "rss", "subscriptions"]
license = "MIT"
name = "doveseed"
readme = "README.rst"
repository = "https://github.com/jgosmann/doveseed/"
version = "2.0.4" # Also update in doveseed/__init__.py

[tool.poetry.dependencies]
aiohttp = {version = "^3.8.4", optional = true}
fastapi = "^0.111.0"
jinja2 = "^3.1.2"
pydantic-settings = "^2.2.0"
python = "^3.9.0"
starlette = {version = "0.37.2", optional = true}
tinydb = "^4.7.0"
typing_extensions = "^4.3.0"

[tool.poetry.extras]
all = ["aiohttp", "starlette"]
recaptcha = ["aiohttp", "starlette"]

[tool.poetry.group.dev.dependencies]
black = ">=24.3.0"
httpx = "^0.27.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.1"
pytest-cov = "^5.0.0"
pytest-emoji = "^0.2.0"
pytest-mypy = "^0.10.0"
uvicorn = "^0.29.0"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
